cmake_minimum_required(VERSION 2.8.12)

IF(PACKAGE_NAME)
	PROJECT(${PACKAGE_NAME})
ELSE()
	PROJECT(RobotUI)
ENDIF()

IF(CMAKE_BUILD_TYPE)
ELSE()	
	SET(CMAKE_BUILD_TYPE Debug)
ENDIF()

MESSAGE("CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")

LINK_DIRECTORIES(${${PROJECT_NAME}_SOURCE_DIR}/thirty_party/boost/lib/)
IF(CMAKE_BUILD_TYPE MATCHES "Debug")
	
ELSE()
	
ENDIF()

SET(EXECUTABLE_OUTPUT_PATH ${${PROJECT_NAME}_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${${PROJECT_NAME}_SOURCE_DIR}/lib)

INCLUDE("CPackSetting.txt")
MESSAGE("PLATFORM: ${CMAKE_SYSTEM_NAME}")

SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS ON)

IF(WIN32)
	INCLUDE("CMakeWindows.txt")
ELSE()
	INCLUDE("CMakeLinux.txt")
ENDIF(WIN32)

INCLUDE_DIRECTORIES(${${PROJECT_NAME}_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${${PROJECT_NAME}_SOURCE_DIR}/src/lib)
ADD_SUBDIRECTORY(src)

